Replace /localhost with /api and use 8081 portal to avoid crash with 80 portal occupied

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,11 +1,14 @@
 # Nginx 配置 - 仓库管理系统
 # 适用于 2核 CPU，8GB 内存，30Mbps 带宽服务器
 #
+# 注意：使用端口 8081（避免与其他服务冲突，如 Dify 占用 80 端口）
+#
 # 部署方法：
 # 1. sudo cp nginx.conf /etc/nginx/sites-available/storage-management
 # 2. sudo ln -s /etc/nginx/sites-available/storage-management /etc/nginx/sites-enabled/
 # 3. sudo nginx -t  # 测试配置
 # 4. sudo systemctl reload nginx
+# 5. 防火墙开放端口：sudo ufw allow 8081/tcp
 
 # 上游后端服务器配置（PM2 运行的 Node.js 实例）
 upstream backend_servers {
@@ -20,49 +23,11 @@ upstream backend_servers {
     keepalive 32;
 }
 
-# HTTP 服务器配置（自动跳转到 HTTPS，可选）
-server {
-    listen 80;
-    listen [::]:80;
-    server_name your-domain.com www.your-domain.com;
-
-    # 如果不需要 HTTPS，注释掉下面这行，使用后面的 location 配置
-    # return 301 https://$server_name$request_uri;
-
-    # 如果不使用 HTTPS，取消下面的注释
-    # root /var/www/storage-management/frontend;
-    # index index.html;
-    # include /etc/nginx/sites-available/storage-management-common;
-}
-
-# HTTPS 服务器配置（可选，需要 SSL 证书）
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name your-domain.com www.your-domain.com;
-#
-#     # SSL 证书配置
-#     ssl_certificate /etc/ssl/certs/your-cert.pem;
-#     ssl_certificate_key /etc/ssl/private/your-key.pem;
-#
-#     # SSL 优化
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers HIGH:!aNULL:!MD5;
-#     ssl_prefer_server_ciphers on;
-#     ssl_session_cache shared:SSL:10m;
-#     ssl_session_timeout 10m;
-#
-#     root /var/www/storage-management/frontend;
-#     index index.html;
-#
-#     include /etc/nginx/sites-available/storage-management-common;
-# }
-
-# ========== 简化配置（不使用 HTTPS）==========
+# ========== HTTP 服务器配置（使用端口 8081）==========
 
 server {
-    listen 80;
-    listen [::]:80;
+    listen 8081;
+    listen [::]:8081;
     server_name localhost;  # 或者你的域名/IP
 
     # 字符集
